# ora

./: .gitignore  README.md
ora/: pyproject.toml
ora/config/: litellm.yaml  pyproject.toml.example
ora/docs/: detailed_presentation.html  presentation.html
ora/frontend/: index.html  package-lock.json  package.json
ora/frontend/src/: App.tsx  index.css
ora/models/: Mistral Large 3 675B Instruct 2512.txt  deepseek-v3.2.txt  devstral-2-123b-instruct-2512.txt  glm4.7.txt  kimi-k2-thinking.txt  kimi-k2.5.txt  minimax-m2.1.txt  nemotron-3-nano-30b-a3b.txt  stable-diffusion-3.5-large.txt  step-3.5-flash.txt
ora/ora/: __init__.py  config.py  main.py
ora/ora/agents/: __init__.py  base.py  builder.py  fleet.py  integrator.py  planner.py  researcher.py  security_agent.py  selfdev.py  tester.py
ora/ora/audit/: __init__.py  immutable_log.py  incidents.py
ora/ora/benchmark/: __init__.py  metrics.py  providers.py  runner.py
ora/ora/clients/: __init__.py  api_client.py
ora/ora/core/: __init__.py  authority.py  constitution.py  kernel.py
ora/ora/gateway/: __init__.py  moneymodz.py
ora/ora/orchestrator/: __init__.py
ora/ora/router/: __init__.py  smart_router.py
ora/ora/security/: __init__.py  authority_kernel.py  gates.py  vault.py
ora/ora/skills/: __init__.py
ora/ora/tools/: __init__.py  code_analyzer.py  filesystem.py  terminal.py  web_search.py
ora/shared/memory/: __init__.py  pulz_memory.py
ora/tui/: __init__.py  __main__.py  app.py  backend.py  config.py  persona.py  screens.py  system_monitor.py  task_manager.py
ora/tui/backend/: __init__.py  (+2 more)
(+30 files in other folders)
